name:                set1
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see ../README.md
homepage:            https://github.com/githubuser/set1#readme
license:             MIT
license-file:        ../LICENSE
author:              Daniel Stiner
maintainer:          dan@danielstiner.com
copyright:           2016 Daniel Stiner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , base64-bytestring
                     , bytestring
                     , either-unwrap
  default-language:    Haskell2010

executable set1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , set1
  default-language:    Haskell2010

test-suite set1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , set1
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/set1
